package structural.proxy;

/**
 * Contrato padrão para representação de uma torre de um mago.
 * @author <a href="mailto:jean.zanatta@unoesc.edu.br">Jean Luiz Zanatta</a>
 * @since 12/02/2022
 */
public interface TorreDoMago {

	void entrar(Mago mago);
}
